infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cs3219
  labels:
    name: cs3219
    environment: production
